update travel,abstract,register and privacy policy pages and fix the responsive issue

--- a/abstract-guidelines.html
+++ b/abstract-guidelines.html
@@ -42,7 +42,8 @@
                     <li><a href="index.html#scientific-program">Scientific Program</a></li>
 
                     <li class="dropdown">
-                        <a href="#"><span>General Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                        <a href="#"><span>General Information</span> <i
+                                class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
                             <li><a href="travel.html">Travel Information</a></li>
                             <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
@@ -54,7 +55,8 @@
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register now</a>
+            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
+                now</a>
         </div>
     </header>
 
@@ -81,20 +83,8 @@
 
                 <div class="abstract-card p-4 p-md-5 shadow-sm rounded-3">
 
-                    <!-- INTRO -->
-                    <h2 class="fw-bold mb-3">Guidelines for Abstract Submission</h2>
-                    <p>
-                        Authors are invited to submit abstracts for consideration as oral or poster presentations
-                        at the Asia Pacific Stroke Conference 2026. Submissions must follow the guidelines below
-                        to ensure consistency and fairness in the review process.
-                    </p>
-
-
-                    <hr class="my-4">
-
-
                     <!-- IMPORTANT DATES -->
-                    <h3 class="fw-bold mt-4">Important Dates</h3>
+                    <h3 class="fw-bold mb-3">Important Dates</h3>
 
                     <table class="dates-table table">
                         <tr>
@@ -103,36 +93,74 @@
                         </tr>
                         <tr>
                             <td>Abstract Submission Opens</td>
-                            <td>1 March 2026</td>
+                            <td>1st March 2026</td>
                         </tr>
                         <tr>
                             <td>Abstract Submission Deadline</td>
-                            <td><strong>30 June 2026</strong></td>
+                            <td><strong>30th June 2026</strong></td>
                         </tr>
                         <tr>
                             <td>Notification of Acceptance</td>
-                            <td>15 August 2026</td>
+                            <td>31st August 2026</td>
                         </tr>
                         <tr>
                             <td>Early Bird Registration Deadline</td>
-                            <td>15 September 2026</td>
+                            <td>30th September 2026</td>
                         </tr>
                     </table>
+
+                    <p>Please note that Late Breaking Abstract Submission Deadline is 31st July 2026.
+                    </p>
+
+
+                    <hr class="my-4">
+
+                    <!-- INTRO -->
+                    <h3 class="fw-bold mb-3">Abstract Submission Guidelines</h3>
+                    <p>
+                        We invite researchers and clinicians to submit abstracts related to stroke for presentation at
+                        the Asia Pacific Stroke Conference (APSC) 2026, to be held from 26–28 November 2026 in Colombo,
+                        Sri Lanka.
+                        All abstracts will undergo peer review by the Scientific Committee, and accepted abstracts will
+                        be published in the official conference materials.
+                    </p>
 
 
                     <hr class="my-4">
 
 
+
                     <!-- GENERAL GUIDELINES -->
-                    <h3 class="fw-bold mt-4">General Requirements</h3>
+                    <h3 class="fw-bold mt-4">Abstract Format</h3>
                     <ul>
-                        <li>All abstracts must be written in English.</li>
-                        <li>Maximum word limit: <strong>300 words</strong> (excluding title and authors).</li>
-                        <li>Abstracts must present original material relevant to stroke science, clinical care,
-                            prevention, or rehabilitation.</li>
-                        <li>Submissions are accepted only through the official online portal.</li>
-                        <li>The presenting author must complete the submission.</li>
-                        <li>Accepted abstracts will be allocated to oral or poster presentation sessions.</li>
+                        <li>Abstracts must be submitted via this Website only.</li>
+                        <li>Abstracts submitted via fax or email will not be accepted.</li>
+                        <li>Abstracts received after the deadline will not be considered.</li>
+                        <li>A confirmation email will be sent upon successful submission.</li>
+                    </ul>
+
+
+                    <hr class="my-4">
+
+
+                    <!-- PREPERATION -->
+                    <h3 class="fw-bold mt-4">Abstract Preparation</h3>
+
+                    <ul>
+                        <li>Abstracts must be written in clear English. Spelling and grammar will not be edited.</li>
+                        <li>Abstract title must be in title case (Capitalizing the First Letter of Most Major Words).</li>
+                        <li>The title should be as concise as possible (ideally ≤ 15 words), indicating the nature of the investigation.</li>
+                        <li>List all authors (First name, Middle initial [optional], Last name)</li>
+                        <li>Only the full institutional affiliations (Omitting degrees, titles, and appointments of authors) of the authors should be submitted</li>
+                        <li>Indicate the city and country of origin of the study</li>
+                        <li>Indicate your preferred style of presentation as follows:
+                            <ul>
+                                <li>Oral</li>
+                                <li>Poster</li>
+                                <li>Either oral or poster</li>
+                            </ul>
+                        </li>
+                        <li>The final presentation format will be determined by the Program Committee.</li>
                     </ul>
 
 
@@ -140,80 +168,49 @@
 
 
                     <!-- STRUCTURE -->
-                    <h3 class="fw-bold mt-4">Required Abstract Structure</h3>
-                    <p>Please structure your abstract using the format below:</p>
+                    <h3 class="fw-bold mt-4">Abstract Content Structure</h3>
 
+                    <p><strong>General points</strong></p>
                     <ul>
-                        <li><strong>Title:</strong> Clear and concise.</li>
-                        <li><strong>Authors:</strong> Full names and affiliations.</li>
-                        <li><strong>Background:</strong> Context and rationale.</li>
-                        <li><strong>Objectives:</strong> Study aims.</li>
-                        <li><strong>Methods:</strong> Study design, participants, and analysis.</li>
-                        <li><strong>Results:</strong> Key findings (avoid placeholders such as “results will be
-                            presented”).</li>
-                        <li><strong>Conclusion:</strong> Summary and significance.</li>
+                        <li>Adhere strictly to the word count (250 words maximum) including all sections except title and author list.</li>
+                        <li>Avoid tables or figures in the abstract (unless specifically permitted) and minimise abbreviations (spell out first time).</li>
+                        <li>Keywords: Provide 3–5 keywords that reflect the main subject of your abstract.</li>
+                        <li>Ethical approval: For human/animal research, include a reference to appropriate ethical clearance.</li>
                     </ul>
 
+                    <p>Each abstract should include the following components:</p>
+                    <p><strong>For research submission</strong></p>
+                    <ul>
+                        <li><strong>Background / Purpose:</strong> A brief statement outlining the objective or rationale of the study.</li>
+                        <li><strong>Methods:</strong> A concise description of the methods used.</li>
+                        <li><strong>Results:</strong> A summary of key findings presented in sufficient detail to support the conclusions.</li>
+                        <li><strong>Conclusions:</strong> The main conclusions derived from the study.</li>
+                    </ul>
+
+                    <p><strong>For case report submission</strong></p>
+                    <ul>
+                        <li><strong>Background / Introduction:</strong> A brief outline of the case context and its relevance or significance.</li>
+                        <li><strong>Case Presentation:</strong> A concise description of the patient’s presentation, clinical findings, investigations, and management.</li>
+                        <li><strong>Discussion:</strong> Highlight the unique or educational aspects of the case, including its implications for clinical practice or lessons learned.</li>
+                        <li><strong>Conclusion:</strong> The main takeaway message or key learning point from the case.</li>
+                    </ul>
 
                     <hr class="my-4">
 
 
-                    <!-- FORMATTING -->
-                    <h3 class="fw-bold mt-4">Formatting Instructions</h3>
+                    <!-- RESPONSIBILITIES -->
+                    <h3 class="fw-bold mt-4">Presenting Author Responsibilities</h3>
                     <ul>
-                        <li>Font: Times New Roman, size 12.</li>
-                        <li>Single spacing throughout the abstract.</li>
-                        <li>No tables, figures, or images allowed.</li>
-                        <li>Define abbreviations upon first use.</li>
-                        <li>Proofread for grammatical and spelling accuracy.</li>
+                        <li>The person submitting the abstract will be designated as the presenting author and the primary contact for all correspondence.</li>
+                        <li>The presenting author must register for the meeting.</li>
+                        <li>The presenting author is responsible for:
+                            <ul>
+                                <li>Notifying all co-authors of the abstract’s submission and acceptance status.</li>
+                                <li>Ensuring all co-authors complete required ‘conflicts of interest’ which should be disclosed at first submission.</li>
+                                <li>Presenting the accepted abstract at the conference in the assigned format.</li>
+                            </ul>
+                        </li>
                     </ul>
-
-
-                    <hr class="my-4">
-
-
-                    <!-- CATEGORIES -->
-                    <h3 class="fw-bold mt-4">Abstract Categories</h3>
-                    <p>Select the category that best matches your submission:</p>
-                    <ul>
-                        <li>Stroke Epidemiology</li>
-                        <li>Acute Stroke Management</li>
-                        <li>Neuroimaging</li>
-                        <li>Rehabilitation & Recovery</li>
-                        <li>Stroke Prevention</li>
-                        <li>Paediatric Stroke</li>
-                        <li>Basic & Translational Neuroscience</li>
-                    </ul>
-
-
-                    <hr class="my-4">
-
-
-                    <!-- PRESENTATION FORMAT -->
-                    <h3 class="fw-bold mt-4">Presentation Formats</h3>
-                    <ul>
-                        <li><strong>Oral Presentations:</strong> 8–10 minutes + Q&A.</li>
-                        <li><strong>Poster Presentations:</strong> Printed posters displayed at the venue.</li>
-                        <li>Details will be provided with the acceptance notification.</li>
-                    </ul>
-
-
-                    <hr class="my-4">
-
-
-                    <!-- POLICIES -->
-                    <h3 class="fw-bold mt-4">Policies & Conditions</h3>
-                    <ul>
-                        <li>At least one author must register for the conference.</li>
-                        <li>The Scientific Committee may reassign presentation formats.</li>
-                        <li>Accepted abstracts will be published in the official APSC 2026 program.</li>
-                    </ul>
-
-
-                    <hr class="my-4">
-
-
-                
 
                 </div>
 
