--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
     <section id="messages" class="messages section light-background">
       <div class="container section-title" data-aos="fade-up">
         <h2>President's Messages</h2>
-        <p>Welcome messages from the Presidents</p>
+        <!-- <p>Welcome messages from the Presidents</p> -->
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
