--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -40,7 +40,8 @@
                     <li><a href="index.html#scientific-program">Scientific Program</a></li>
 
                     <li class="dropdown">
-                        <a href="#"><span>General Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                        <a href="#"><span>General Information</span> <i
+                                class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
                             <li><a href="travel.html">Travel Information</a></li>
                             <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
@@ -52,7 +53,8 @@
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register now</a>
+            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
+                now</a>
 
         </div>
     </header>
@@ -81,34 +83,45 @@
                     <!-- INTRO -->
                     <h2 class="mb-3 fw-bold">APSC 2026 Privacy Policy</h2>
                     <p>
-                        Asia Pacific Stroke Conference 2026 (APSC 2026) recognizes the importance of protecting personal
-                        information
-                        and is committed to handling such data responsibly and in accordance with applicable data
-                        protection laws,
-                        including the Personal Data Protection Act of Sri Lanka (PDPA) and international standards.
+                        Asia Pacific Stroke Conference 2026 (APSC 2026) (hereinafter referred to as “we,” “us,” or
+                        “our”) recognizes the importance of protecting personal information and is committed to handling
+                        such data responsibly and in accordance with applicable data protection laws, including the
+                        Personal Data Protection Act of Sri Lanka (PDPA) and other relevant international standards.</p>
+
+                    <p>
+
+                        This Privacy Policy outlines the types of personal data we may collect, the purposes for which
+                        we use it, the parties with whom we may share it, and how you can contact us regarding your
+                        information.
                     </p>
-                    <p>This policy outlines what personal data we collect, how we use it, who we may share it with, and
-                        your rights as a participant.</p>
+                    <p>
+                        If you provide personal data about another individual, you confirm that you are authorized to do
+                        so and that you have obtained the individual’s consent for the processing of their data in
+                        accordance with this policy and the purposes stated below.
+                    </p>
 
                     <hr class="my-4">
 
                     <!-- PERSONAL DATA WE COLLECT -->
                     <h3 class="fw-bold mt-4">Personal Data We Collect</h3>
-                    <p>We may collect the following information from participants, speakers, and delegates.</p>
+                    <p>We may collect the following information from APSC 2026 participants, speakers, and delegates.
+                    </p>
 
                     <h5 class="mt-3 fw-semibold">For All Registrants:</h5>
                     <ul>
-                        <li>First & Last Name</li>
-                        <li>Title and Professional Credentials</li>
+                        <li>First Name</li>
+                        <li>Last Name</li>
+                        <li>Title</li>
+                        <li>Professional Credentials</li>
                         <li>Nationality</li>
                         <li>Position / Designation</li>
-                        <li>Organization / Institution</li>
+                        <li>Affiliated Organization / Institution</li>
                         <li>Country of Residence</li>
                         <li>Email Address</li>
-                        <li>Payment Information (for registration)</li>
+                        <li>Payment Information (for registration and related services)</li>
                     </ul>
 
-                    <h5 class="mt-3 fw-semibold">For Speakers:</h5>
+                    <h5 class="mt-3 fw-semibold">For Speakers only:</h5>
                     <ul>
                         <li>Photograph</li>
                         <li>Biosketch / Profile Information</li>
@@ -118,37 +131,47 @@
 
                     <!-- PURPOSES -->
                     <h3 class="fw-bold mt-4">Purposes for Which We Collect and Use Personal Data</h3>
+
+                    <p>The personal data you provide will be used for the following purposes:</p>
                     <ul>
-                        <li>To process and manage conference registrations</li>
-                        <li>To respond to inquiries and service requests</li>
-                        <li>To verify identity during registration and check-in</li>
-                        <li>To communicate updates about your participation</li>
-                        <li>To feature speakers in official conference materials</li>
-                        <li>To prepare badges, certificates, and other event items</li>
-                        <li>To meet administrative or legal requirements</li>
+                        <li>To process and manage your registration for the conference, workshops, and other related
+                            events</li>
+                        <li>To respond to inquiries and service requests related to APSC 2026</li>
+                        <li>To verify your identity during registration and on-site check-in</li>
+                        <li>To facilitate communication regarding your participation and event logistics</li>
+                        <li>To feature speakers’ profiles or participation details in promotional materials, including
+                            the official website, program book, brochures, and social media</li>
+                        <li>To prepare name badges, certificates, and other official event materials</li>
+                        <li>To comply with administrative or legal requirements applicable to the event</li>
                     </ul>
 
                     <hr class="my-4">
 
                     <!-- DISCLOSURE -->
                     <h3 class="fw-bold mt-4">Disclosure of Personal Data</h3>
-                    <p>We do <strong>not</strong> sell, rent, or share personal data with unrelated third parties.</p>
-                    <p>Your data may be shared only with:</p>
+                    <p>We do <strong>not</strong> sell, rent, or otherwise disclose your personal data to unrelated
+                        third parties</p>
+                    <p>However, your data may be shared with:</p>
                     <ul>
-                        <li>Official contractors or service providers assisting event operations</li>
-                        <li>Authorized partners coordinating the scientific program or logistics</li>
-                        <li>Regulatory or legal authorities when required by law</li>
+                        <li>Contractors or service providers engaged by us to perform specific functions related to
+                            event management, registration processing, or technical operations</li>
+                        <li>Authorized partners who assist with the conference logistics or scientific program
+                            coordination</li>
                     </ul>
+
+                    <p>We may also disclose personal data if required by law, a court order, or at the request of a
+                        competent regulatory or public authority. </p>
 
                     <hr class="my-4">
 
                     <!-- DATA STORAGE -->
                     <h3 class="fw-bold mt-4">Data Storage and Safeguarding</h3>
                     <p>
-                        All personal data collected through the official APSC 2026 website or other approved channels
-                        is securely stored in a password-protected system with strict access controls.
-                        We use reasonable administrative and technical measures to prevent unauthorized access or
-                        misuse.
+                        All personal data collected through the official APSC 2026 website (www.apsc2026.lk) or by other
+                        authorized means will be securely stored in a password-protected database with appropriate
+                        technical and organizational safeguards in place.
+                        We employ reasonable measures to protect against unauthorized access, alteration, disclosure, or
+                        destruction of your personal data.
                     </p>
 
                     <hr class="my-4">
@@ -156,22 +179,38 @@
                     <!-- RETENTION -->
                     <h3 class="fw-bold mt-4">Retention Period</h3>
                     <p>
-                        Personal data will be retained only as long as necessary for event administration,
-                        legal obligations, or post-event requirements.
+                        Personal data will be retained only for as long as necessary to fulfil the purposes outlined
+                        above, comply with legal obligations, or support post-event administrative requirements.
                     </p>
 
                     <hr class="my-4">
 
                     <!-- YOUR RIGHTS -->
                     <h3 class="fw-bold mt-4">Your Rights</h3>
-                    <p>You may contact us to:</p>
+                    <p>You may contact us at any time to:</p>
                     <ul>
                         <li>Request access to your personal data</li>
-                        <li>Request correction, updates, or deletion</li>
-                        <li>Withdraw consent for specific uses (where applicable)</li>
+                        <li>Request correction, updating, or deletion of your data</li>
+                        <li>Withdraw consent for specific data uses (where applicable)</li>
                     </ul>
 
+                    <p>Requests should be directed to the APSC 2026 Secretariat using the contact information provided
+                        below.</p>
+
+
+
                     <hr class="my-4">
+
+                    <!-- YOUR RIGHTS -->
+                    <h3 class="fw-bold mt-4">Contact Information</h3>
+                    <p><strong>APSC 2026 Secretariat:</strong></p>
+                    <p>Email: apsc2026.secretariat@gmail.com</p>
+                    <p>C/o National Stroke Association of Sri Lanka (NSASL)
+                        “Wijerama House”, No. 06,
+                        Wijerama Mawatha,
+                        Colombo 7
+                        Sri Lanka</p>
+
 
 
                     <hr class="my-4">
@@ -179,8 +218,9 @@
                     <!-- POLICY UPDATES -->
                     <h3 class="fw-bold mt-4">Policy Updates</h3>
                     <p>
-                        This Privacy Policy may be updated periodically.
-                        The most recent version will always be available on the APSC 2026 official website.
+                        This Privacy Policy may be updated periodically to reflect changes in our practices or
+                        applicable regulations. The latest version will always be available on the official APSC 2026
+                        website.
                     </p>
 
                 </div>
