--- a/registration-guidelines.html
+++ b/registration-guidelines.html
@@ -54,7 +54,8 @@
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register now</a>
+            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
+                now</a>
 
         </div>
     </header>
@@ -83,30 +84,26 @@
                 <div class="registration-card p-4 p-md-5 shadow-sm rounded-3">
 
                     <!-- INTRO -->
-                    <!-- <h2 class="fw-bold mb-3">Registration Information</h2>
+                    <h2 class="fw-bold mb-3">Registration APSC 2026</h2>
                     <p>
-                        Please complete the registration form to secure your participation in the Asia Pacific Stroke
-                        Conference 2026.
-                        Registration fees vary according to your country income group and participant category.
+                        Delegates, including abstract presenters, should complete their registration online via the
+                        conference website.
                     </p>
 
                     <p>
-                        To check your country’s income classification:
-                        <a href="https://datahelpdesk.worldbank.org/knowledgebase/articles/906519-world-bank-country-and-lending-groups"
-                            target="_blank">Click here</a>
+                        Speakers should not register through the website.
+                    </p>
+                    <p>
+                        Speaker registration will be completed via a personalised email sent directly by the Organising
+                        Committee.
                     </p>
 
-                    <hr class="my-4"> -->
+                    <hr class="my-4">
 
 
                     <!-- REGISTRATION FEES -->
                     <h3>Registration Fees</h3>
                     <p class="mb-0">
-                        Registration fee depends on the
-                        <a href="https://datahelpdesk.worldbank.org/knowledgebase/articles/906519-world-bank-country-and-lending-groups"
-                            target="_blank" rel="noopener">
-                            World Bank Country Classification
-                        </a>.
                     </p>
                     <br>
 
@@ -120,14 +117,18 @@
                                     <th class="text-center">Onsite Registration</th>
                                 </tr>
                                 <tr>
-                                    <th>Early Bird (1 March to 31 August 2026)</th>
-                                    <th>Regular (1 September – 28 November 2026)</th>
+                                    <th>Early Bird (1st March to 30th September 2026)</th>
+                                    <th>Regular (1st October to 28th November 2026)</th>
                                     <th>Fee currency Sri Lankan Rupees (LKR) (Cash only)</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr class="fees-group">
-                                    <th colspan="4">Upper Middle to High Income Countries</th>
+                                    <th colspan="4">Upper Middle to High Income Countries <a
+                                            href="https://datahelpdesk.worldbank.org/knowledgebase/articles/906519-world-bank-country-and-lending-groups"
+                                            target="_blank" rel="noopener">
+                                            (World Bank Country Classification)
+                                        </a></th>
                                 </tr>
                                 <tr>
                                     <td>Physician</td>
@@ -143,7 +144,11 @@
                                 </tr>
 
                                 <tr class="fees-group">
-                                    <th colspan="4">Low to Lower Middle Income Countries</th>
+                                    <th colspan="4">Low to Lower Middle Income Countries <a
+                                            href="https://datahelpdesk.worldbank.org/knowledgebase/articles/906519-world-bank-country-and-lending-groups"
+                                            target="_blank" rel="noopener">
+                                            (World Bank Country Classification)
+                                        </a></th>
                                 </tr>
                                 <tr>
                                     <td>Physician</td>
@@ -195,6 +200,8 @@
                     <!-- PAYMENT -->
                     <h3>Payment</h3>
                     <p class="section-text">
+                        Please use the web portal for registration.
+                    <p class="section-text">
                         Please note that onsite registration is available in Sri Lankan Rupees (LKR) only, in cash.
                     </p>
 
@@ -208,20 +215,20 @@
                         when written
                         notice of cancellation is received by the secretariat at
                         <a href="mailto:apsc2026.secretariat@gmail.com">apsc2026.secretariat@gmail.com</a> on or before
-                        31 August 2026.
+                        31st August 2026.
                         A cancellation charge of 30% of fees paid will be deducted to cover administrative costs prior
-                        to making refunds.
-                        All refund procedures will be done by the secretariat via the online registration system after
-                        the conference.
-                        Cancellations made after 1 September 2026 will not be refunded, nor will refunds be provided for
-                        no-shows.
+                        to making refunds. All refund procedures will be done by the secretariat via the online
+                        registration system after the conference.
+                        Cancellations made after 1st September 2026 will not be refunded, nor will refunds be provided
+                        for no-shows.
                     </p>
                     <hr class="my-4">
 
 
                     <!-- BUTTON -->
                     <div class="text-center mt-4">
-                        <a href="https://portal.apsc2026.lk/registration" class="register-btn">Proceed to Registration</a>
+                        <a href="https://portal.apsc2026.lk/registration" class="register-btn">Proceed to
+                            Registration</a>
                     </div>
 
                 </div>
