--- a/travel.html
+++ b/travel.html
@@ -65,7 +65,8 @@
                     <li><a href="index.html#scientific-program">Scientific Program</a></li>
 
                     <li class="dropdown">
-                        <a href="#"><span>General Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                        <a href="#"><span>General Information</span> <i
+                                class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
                             <li><a href="travel.html">Travel Information</a></li>
                             <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
@@ -77,7 +78,8 @@
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register now</a>
+            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register
+                now</a>
 
         </div>
     </header>
@@ -106,12 +108,16 @@
                     <!-- VISA -->
                     <h3><i class="bi bi-passport me-2 text-primary"></i>Visa Information</h3>
                     <p>
-                        International delegates must obtain a valid Visa or Electronic Travel Authorization (ETA)
-                        before entering Sri Lanka.
-                        The process is entirely online and typically takes only a few days.
+                        All international delegates attending <strong>APSC 2026</strong> are required to obtain a valid
+                        <strong>visa</strong> or
+                        <strong>Electronic Travel Authorization (ETA)</strong> before entering Sri Lanka. The process is
+                        straightforward
+                        and can be completed entirely online through the official government portal.
+                        We strongly recommend applying for the ETA well in advance to ensure smooth entry upon arrival.
+                        Most travellers receive approval within a few days.
                     </p>
                     <p>
-                        Apply through the official portal:<br>
+                        For full details and to apply online, please visit the official Sri Lanka ETA website:<br>
                         <a href="https://www.eta.gov.lk" target="_blank"><strong>www.eta.gov.lk</strong></a>
                     </p>
 
@@ -119,19 +125,28 @@
 
                     <!-- TRANSPORT -->
                     <h3><i class="bi bi-taxi-front me-2 text-primary"></i>Transport from Airport to Colombo</h3>
-                    <p>BIA Airport is 30 km from Colombo (45–60 minutes travel time). Recommended transport options:</p>
+                    <p><strong>Bandaranaike International Airport (BIA)</strong> is approximately 30 km from Colombo,
+                        with a travel time
+                        of around 45–60 minutes depending on traffic. Transport options for delegates include
+                        <strong>Airport
+                            Taxi Counters</strong> (Official taxi services available at the arrivals terminal). Many
+                        hotels offer
+                        airport pickups upon request.
+                        We recommend <strong>pre-booking transfers</strong> or using official airport counters for
+                        convenience and safety
+                    </p>
 
-                    <ul>
+                    <!-- <ul>
                         <li><strong>Airport Taxi Counters</strong> – Official on-arrival taxis.</li>
                         <li><strong>PickMe</strong> – Local ride-hailing app (cars, vans, executive).</li>
                         <li><strong>Welcome Pickups</strong> – Pre-booked airport transfers.</li>
                         <li><strong>Hotel Transfers</strong> – Available on request.</li>
-                    </ul>
+                    </ul> -->
 
                     <hr>
 
                     <!-- ACCOMMODATION -->
-                    <h3><i class="bi bi-building me-2 text-primary"></i>Accommodation</h3>
+                    <!-- <h3><i class="bi bi-building me-2 text-primary"></i>Accommodation</h3>
                     <p>Colombo offers a variety of hotels close to the conference venue at Cinnamon Grand Colombo.
                     </p>
 
@@ -146,64 +161,71 @@
 
                     <p>We recommend booking early due to peak travel season in November.</p>
 
-                    <hr>
+                    <hr> -->
 
                     <!-- AIR TRAVEL -->
                     <h3><i class="bi bi-airplane me-2 text-primary"></i>Air Travel to Sri Lanka</h3>
                     <p>
-                        Bandaranaike International Airport (BIA) is the main international gateway with flights from
-                        major global airlines including:
+                        <strong>Bandaranaike International Airport (BIA)</strong>, located about 30 km north of Colombo,
+                        is Sri Lanka’s
+                        main international gateway. The airport is well connected to major cities across Asia, the
+                        Middle East, Europe, and Australia.
+                        Leading airlines flying to Colombo include <strong>Sri Lankan Airlines, Qatar Airways, Emirates,
+                            Singapore Airlines, Etihad Airways, Thai Airways,</strong> and <strong>Air India</strong>,
+                        among others.
                     </p>
+
+                    <p>Delegates are advised to:</p>
 
                     <ul>
-                        <li>SriLankan Airlines</li>
-                        <li>Qatar Airways</li>
-                        <li>Emirates</li>
-                        <li>Singapore Airlines</li>
-                        <li>Etihad Airways</li>
-                        <li>Thai Airways</li>
-                        <li>Air India</li>
+                        <li><strong>Book flights early</strong> due to high travel demand in November.</li>
+                        <li><strong>Check transit visa and entry requirements</strong> for connecting flights.</li>
+                        <li><strong>Confirm baggage allowances and travel insurance</strong> directly with the airline.
+                        </li>
                     </ul>
 
-                    <p>
-                        Check flight availability and updates at:<br>
-                        <a href="https://www.airport.lk" target="_blank"><strong>www.airport.lk</strong></a>
-                    </p>
 
                     <hr>
 
                     <!-- EXPLORE -->
                     <h3><i class="bi bi-geo-alt me-2 text-primary"></i>Explore Sri Lanka</h3>
-                    <p>Discover the beauty, culture, and heritage of the island during your visit.</p>
+                    <p>Sri Lanka, the <i>“Pearl of the Indian Ocean”</i> offers a wealth of cultural, historical, and
+                        natural
+                        attractions. From Colombo, delegates can explore destinations across the island, making their
+                        visit both professionally and personally rewarding.</p>
 
+                    <p><strong>Highlights include:</strong></p>
                     <ul>
-                        <li><strong>Ancient Cities:</strong> Sigiriya, Anuradhapura, Polonnaruwa</li>
-                        <li><strong>Hill Country:</strong> Kandy, Nuwara Eliya, Ella</li>
-                        <li><strong>Beaches:</strong> Mirissa, Unawatuna, Trincomalee</li>
-                        <li><strong>Wildlife:</strong> Yala, Udawalawe, Horton Plains</li>
+                        <li><strong>Ancient Cities:</strong> Sigiriya, Anuradhapura, and Polonnaruwa — UNESCO World
+                            Heritage sites.</li>
+                        <li><strong>Hill Country:</strong> Nuwara Eliya, Kandy, and Ella with tea plantations, cool
+                            climates, and scenic landscapes.</li>
+                        <li><strong>Beaches:</strong> Mirissa, Unawatuna, Bentota, and Trincomalee for golden sands and
+                            clear waters.</li>
+                        <li><strong>Wildlife & Nature:</strong> Yala, Udawalawe, and Horton Plains National Parks for
+                            safaris and wildlife spotting.</li>
+                        <li><strong>Cultural Experiences:</strong> Traditional festivals, local crafts, and authentic
+                            Sri Lankan cuisine.</li>
                     </ul>
 
                     <p>
-                        Learn more at:<br>
-                        <a href="https://www.srilanka.travel" target="_blank"><strong>www.srilanka.travel</strong></a>
+                        November offers a tropical yet pleasantly mild climate, ideal for sightseeing and short
+                        excursions.
                     </p>
 
+                    <p>For more information about travel destinations, tours, and tips, visit the official Sri Lanka
+                        tourism website:<br>
+                        <a href="https://www.srilanka.travel" target="_blank"><strong>www.srilanka.travel</strong></a>
+                    </p>
                     <hr>
 
                     <!-- HEALTH -->
                     <h3><i class="bi bi-shield-check me-2 text-primary"></i>Health & Safety</h3>
-                    <ul>
-                        <li>Ensure routine vaccinations are up to date.</li>
-                        <li>Use mosquito repellent (Dengue is present).</li>
-                        <li>Drink bottled or filtered water.</li>
-                        <li>Eat at reputable restaurants.</li>
-                        <li>Medical facilities are widely available in Colombo.</li>
-                    </ul>
-
                     <p>
-                        Health guidelines:<br>
-                        <a href="https://www.srilanka.travel/health-and-safety" target="_blank"><strong>Health & Safety
-                                Info</strong></a>
+                        The health and safety of all delegates is a top priority. Sri Lanka is generally a safe
+                        destination, but visitors are encouraged to take standard precautions.
+                        Delegates are encouraged to <strong>consult their healthcare provider</strong>  before travel and to carry
+                        necessary medications.
                     </p>
 
                     <hr>
